# MMH-LabReports

./: .gitignore
Lab01/aestool/: .gitignore  CMakeLists.txt  README.md
Lab01/aestool/gui/: aestool_gui.py  requirements.txt
Lab01/aestool/include/: aestool.hpp  aestool_c_api.h
Lab01/aestool/src/: aestool.cpp  aestool_c_api.cpp  main.cpp
Lab01/aestool/vectors/: aead.json  nist_38a.json  small.txt
Lab02/aes2tool/: .gitignore  README.md
Lab02/aes2tool/include/: aes2tool.hpp
Lab02/aes2tool/src/: aes.cpp  aesni.cpp  main.cpp
Lab02/aes2tool/vectors/: aes_kat.json
Lab03/rsatool/: .gitignore  README.md
Lab03/rsatool/include/: rsatool.hpp
Lab03/rsatool/src/: main.cpp  rsatool.cpp
Lab03/rsatool/vectors/: README.md
Lab04/hashtool/: .gitignore  CMakeLists.txt  README.md
Lab04/hashtool/attacks/: README.md  chosen_prefix_certificate_demo.md
Lab04/hashtool/certs/: README.md  nginx_tls_example.conf
Lab04/hashtool/include/: hashtool.hpp
Lab04/hashtool/src/: hashtool.cpp  main.cpp
Lab04/hashtool/vectors/: hash_kat.json
Lab05/sigtool/: .gitignore  CMakeLists.txt  README.md
Lab05/sigtool/include/: sigtool.hpp
Lab05/sigtool/src/: main.cpp  sigtool.cpp
Lab05/sigtool/vectors/: sig_kat.json
Lab06/pqtool/: .gitignore  CMakeLists.txt  README.md
Lab06/pqtool/include/: pqtool.hpp
Lab06/pqtool/src/: main.cpp  pqtool.cpp
Lab06/pqtool/vectors/: pq_kat.json
docs/: Cryptography_Labs.md  Lab01_Report_Guide.md  Lab1.md  Lab2.md  Lab3.md  lab4.md  lab5.md  lab6.md  objectives.md
